[package]
name = "lsiohttps"
version = "0.1.3"
authors = ["Chris Jones"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["http", "https", "ceph"]
repository = "https://github.com/lambdastackio/lsiohttps"
homepage = "https://lambdastackio.github.io/lsiohttps/lsiohttps"
documentation = "https://lambdastackio.github.io/lsiohttps/lsiohttps"
description = """
HTTP Server for the LSIO projects that is built on Tokio Project.
"""

[dependencies]
lsio = "0.1"
aws-sdk-rust = "0.1"
futures = "0.1"
log = "0.3"
net2 = "0.2"
time = "0.1"
clap = "2"
url = "1"
#filetime = "0"
toml = "0.2"
term = "0.4"
num_cpus = "1"
mime = "0"
regex = "0.1"
rustc-serialize = "0"
multipart = "0"
mime_guess = "1"
slog = "*"
slog-json = "*"
slog-term = "*"
slog-scope = "*"
tokio-core = "0"
tokio-http2 = "0" #{ path = "../tokio-http2" }
tokio-proto = "0.1" #{ git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = "0.1"
pretty_env_logger = "0" #{ git = "https://github.com/seanmonstar/pretty-env-logger" }
