[package]
name = "httpd"
version = "0.1.6"
authors = ["Chris Jones"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["http", "https", "ceph", "tokio", "s3"]
repository = "https://github.com/lambdastackio/httpd"
homepage = "https://lambdastackio.github.io/httpd/httpd"
documentation = "https://lambdastackio.github.io/httpd/httpd"
description = """
HTTP/1.1 (HTTP/2 soon) Server that is built on Tokio Project Pipeline. It supports Asyn I/O (Futures), Pipelining and
multipart uploads.
"""

[dependencies]
lsio = "0.1"
aws-sdk-rust = "0.1"
futures = "0.1"
log = "0.3"
net2 = "0.2"
time = "0.1"
clap = "2"
url = "1"
#filetime = "0"
daemonize = "0"
toml = "0.2"
term = "0.4"
num_cpus = "1"
regex = "0.1"
rustc-serialize = "0"
multipart = "0"
mime = "0"
mime_guess = "1"
tokio-core = "0"
tokio-http2 = "0"  #{ path = "../tokio-http2" }
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-tls = "0"
native-tls = "0"
pretty_env_logger = "0"
